--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -170,7 +170,7 @@
 @media screen and (max-width: 390px) {
     .main {
         .head {
-            font-size: 1.5px;
+            font-size: 1.5rem;
         }
         &_grid {
             grid-template-columns: 1fr 1fr;
